# lapack

./: .gitignore  README  configure.ac  lapack.buildinfo.in  lapack.cabal
cbits/: LAPACK.h  config.h.in  double.c  zomplex.c
lib/Data/Elem/: LAPACK.hs
lib/Data/Elem/LAPACK/: C.hs  Double.hs  Zomplex.hs
lib/Data/Matrix/: House.hs  HouseBase.hs  Perm.hs  QR.hs  ReflectorBase.hs
lib/LAPACK/: CTypes.hs
m4/: ax_lapack.m4
tests/: Driver.hs  Main.hs  Makefile.in  Orthogonal.hs
