name:            lapack
Version:         0.1
homepage:        http://github.com/patperry/lapack
synopsis:        Bindings to the LAPACK library.
description:
    LAPACK is written in Fortran77 and provides routines for solving systems
    of simultaneous linear equations, least-squares solutions of linear 
    systems of equations, eigenvalue problems, and singular value problems. 
    The associated matrix factorizations (LU, Cholesky, QR, SVD, Schur, 
    generalized Schur) are also provided, as are related computations such as
    reordering of the Schur factorizations and estimating condition numbers. 
    Dense and banded matrices are handled, but not general sparse matrices. In 
    all areas, similar functionality is provided for real and complex matrices,
    in both single and double precision.
    .
    For more information, see the Netlib LAPACK webpage:
    <http://www.netlib.org/lapack/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2009. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version: >= 1.2.0
build-type:      Configure
tested-with:     GHC ==6.10.1

extra-source-files:     NEWS README TODO configure.ac configure
                        aclocal.m4 m4/ax_lapack.m4 m4/ax_blas.m4 
                        lapack.buildinfo.in cbits/config.h.in cbits/LAPACK.h
                        tests/Makefile.in tests/Driver.hs tests/Main.hs
                        tests/Orthogonal.hs
                        
extra-tmp-files:        config.log config.status autom4te.cache
                        lapack.buildinfo cbits/config.h
                        tests/Makefile

library
    hs-source-dirs:     lib
    exposed-modules:
                        Data.Elem.LAPACK
                        Data.Elem.LAPACK.C
                        Data.Matrix.House
                        Data.Matrix.QR
    other-modules:
                        Data.Elem.LAPACK.Double
                        Data.Elem.LAPACK.Zomplex
                        Data.Matrix.HouseBase
                        Data.Matrix.ReflectorBase
                        LAPACK.CTypes

    includes:           config.h LAPACK.h
    include-dirs:       cbits
    c-sources:          cbits/double.c cbits/zomplex.c

    ghc-options:        -Wall                   

    extensions:         FlexibleInstances
                        ForeignFunctionInterface
                        GADTs
                        MultiParamTypeClasses

    build-depends:      base, blas >=0.8, ieee, permutation >=0.2,
                        monad-interleave, QuickCheck >=1.2, QuickCheck <2

